# src/integration-test/resources/OpenApiSpecificationIT/openapi.yaml
@@ -13,6 +13,55 @@ tags:
 - name: Events
   description: Event operations
 paths:
+  /{municipalityId}/events/{id}:
+    get:
+      tags:
+      - Events
+      summary: Fetch log event by id
+      description: Fetch a single log event by its unique id
+      operationId: getEventById
+      parameters:
+      - name: municipalityId
+        in: path
+        description: Municipality id
+        required: true
+        schema:
+          type: string
+        example: 2281
+      - name: id
+        in: path
+        description: Event id
+        required: true
+        schema:
+          type: string
+        example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
+      responses:
+        "200":
+          description: Successful Operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Event"
+        "400":
+          description: Bad Request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                - $ref: "#/components/schemas/Problem"
+                - $ref: "#/components/schemas/ConstraintViolationProblem"
+        "404":
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
+        "500":
+          description: Internal Server error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/Problem"
   /{municipalityId}/{logKey}:
     get:
       tags:
@@ -298,6 +347,12 @@ components:
       type: object
       description: Event model
       properties:
+        id:
+          type: string
+          description: Unique identifier for this event
+          examples:
+          - 3fa85f64-5717-4562-b3fc-2c963f66afa6
+          readOnly: true
         logKey:
           type: string
           description: Unique identifier
@@ -306,6 +361,16 @@ components:
           readOnly: true
         type:
           $ref: "#/components/schemas/EventType"
+        subType:
+          type: string
+          description: Event sub type
+          examples:
+          - ATTACHMENT
+        transactionId:
+          type: string
+          description: Transaction id, groups events originating from the same operation
+          examples:
+          - 3fa85f64-5717-4562-b3fc-2c963f66afa6
         municipalityId:
           type: string
           description: Municipality ID
@@ -347,6 +412,11 @@ components:
           description: Source which the event refers to
           examples:
           - errand
+        details:
+          type: string
+          description: Additional details about the event
+          examples:
+          - Filnamn 'abc.pdf'
         metadata:
           type: array
           items:
